# dtech--test-task

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  launcher.py  pyproject.toml
app/: main.py
app/db/: __init__.py  base.py  models.py
app/dependencies/: auth.py  database.py
app/exceptions/: auth.py  base.py  database.py
app/routes/: __init__.py  auth.py  bills.py  payments.py  products.py  transactions.py  users.py
app/schemas/: auth.py  base.py  bills.py  payments.py  products.py  transactions.py  users.py
app/services/: __init__.py  database.py  utils.py
app/settings/: __init__.py  base.py
docker/api/: Dockerfile
