[tool.poetry]
name = "dtech-test-task"
version = "0.1.0"
description = ""
authors = ["ok_kir <okunev.kirill.ok@yandex.ru>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.86.0"}
typer = {extras = ["all"], version = "^0.7.0"}
SQLAlchemy = "^1.4.43"
asyncpg = "^0.27.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
